--- a/spellsource-protos/build.gradle
+++ b/spellsource-protos/build.gradle
@@ -53,12 +53,8 @@ dependencies {
   }
   api("io.grpc:grpc-services:$grpcVersion") {
     exclude group: 'com.google.code.gson', module: 'gson'
-    exclude group: 'com.google.protobuf', module: 'protobuf-java-util'
   }
-  api("com.hubspot.jackson:jackson-datatype-protobuf:0.9.16") {
-    exclude group: 'com.google.protobuf', module: 'protobuf-java-util'
-    exclude group: 'com.google.code.findbugs', module: 'annotations'
-  }
+  api("org.curioswitch.curiostack:protobuf-jackson:2.6.0")
   api('com.netflix.concurrency-limits:concurrency-limits-grpc:0.3.6') {
     exclude group: 'com.google.protobuf', module: 'protobuf-java'
     exclude group: 'com.google.code.gson', module: 'gson'
