--- a/vertx-grpc/vertx-grpc-client/build.gradle
+++ b/vertx-grpc/vertx-grpc-client/build.gradle
@@ -52,6 +52,10 @@ dependencies {
   protocPlugin project(path: ':vertx-grpc:vertx-grpc-protoc-plugin2', configuration: 'shadow')
 }
 
+test {
+  dependsOn "generateProto"
+}
+
 protobuf {
   protoc {
     artifact = "com.google.protobuf:protoc:3.25.5"
