--- a/vertx-grpc/vertx-grpc-it/build.gradle
+++ b/vertx-grpc/vertx-grpc-it/build.gradle
@@ -44,6 +44,10 @@ dependencies {
 }
 
 
+test {
+  dependsOn "generateProto"
+}
+
 protobuf {
   protoc {
     artifact = "com.google.protobuf:protoc:3.25.5"
