--- a/vertx-grpc/vertx-grpc-server/build.gradle
+++ b/vertx-grpc/vertx-grpc-server/build.gradle
@@ -66,6 +66,10 @@ dependencies {
 
 }
 
+test {
+  dependsOn "generateProto"
+}
+
 protobuf {
   protoc {
     artifact = "com.google.protobuf:protoc:3.25.5"
