fix rxjava issue where callbacks are scheduled on a nude thread instead of a vertx thread, it should be a vertx thread and now this is resolved

--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ subprojects {
         }
 
         if (details.requested.group == 'io.reactivex.rxjava3' && details.requested.module.name == "rxjava") {
-          details.useVersion "3.1.6"
+          details.useVersion rxJavaVersion
         }
 
         if (details.requested.group == 'commons-io') {
