test confirms single player queue gracefully continues to work for same client even when booted due to no activity

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+yarn.lock
+node_modules/
 spellsource-python/workdir/models/
 spellsource-python/workdir/user/
 spellsource-python/workdir/custom_nodes/
