--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spellsource-www",
+  "name": "spellsource-web",
   "version": "0.10.0-SNAPSHOT",
   "description": "Spellsource Internet presence, including documentation, wiki and editor",
   "main": "index.js",
@@ -109,7 +109,7 @@
     "@types/elasticlunr": "^0.9.5",
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.15.3",
+    "@types/node": "^22.10.5",
     "@types/probe-image-size": "^7.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -121,7 +121,7 @@
     "jest": "^29.1.0",
     "jest-environment-jsdom": "^29.1.0",
     "patch-package": "^6.5.1",
-    "prettier": "^2.8.4",
+    "prettier": "^3.4.2",
     "react-test-renderer": "^17.0.2",
     "standard": "^16.0.3",
     "ts-jest": "^29.1.0",
@@ -132,6 +132,6 @@
     "wrap-ansi": "7.0.0",
     "string-width": "4.1.0"
   },
-  "packageManager": "yarn@4.5.1+sha512.341db9396b6e289fecc30cd7ab3af65060e05ebff4b3b47547b278b9e67b08f485ecd8c79006b405446262142c7a38154445ef7f17c1d5d1de7d90bf9ce7054d",
+  "packageManager": "yarn@4.5.0",
   "keywords": []
 }
