--- a/spellsource-game-benchmarks/build.gradle
+++ b/spellsource-game-benchmarks/build.gradle
@@ -1,10 +1,8 @@
 plugins {
     id 'java-library'
-    id "me.champeau.gradle.jmh" version "0.5.3"
+    id "me.champeau.jmh" version "0.7.2"
 }
 
-apply plugin: 'java-library'
-apply plugin: "me.champeau.gradle.jmh"
 apply from: '../gradle/instrument.gradle'
 
 dependencies {
