--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-and-deploy-server:
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, linux, x64 ]
     steps:
       - uses: actions/checkout@v4
         with:
