--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -1,13 +1,13 @@
 name: Build Website
 on:
   push:
-    branches: ['develop']
+    branches: [ 'develop' ]
     paths:
       - spellsource-web/**
-    
+
 jobs:
   build-and-deploy-website:
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, linux, x64 ]
     steps:
       - uses: actions/checkout@v4
         with:
