try specifying container

--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   build:
     runs-on: [ self-hosted, linux, x64 ]
+    container: "ubuntu:22.04"
     steps:
       - uses: actions/checkout@v4
         with:
