--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   build-and-deploy-server:
     if: "startsWith(github.ref, 'refs/tags/')" # Deploy a new server version when a new tag is pushed
+    container: "ubuntu:22.04"
     runs-on: [ self-hosted, linux, x64 ]
     steps:
       - uses: actions/checkout@v4
@@ -39,6 +40,7 @@ jobs:
   build-and-deploy-website:
     if: "!startsWith(github.ref, 'refs/tags/')" # Deploy a new website version for each push to master
     runs-on: [ self-hosted, linux, x64 ]
+    container: "ubuntu:22.04"
     steps:
       - uses: actions/checkout@v4
         with:
