--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -14,11 +14,11 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
-          distribution: temurin
+          distribution: oracle
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-      - uses: actions/setup-dotnet@v3
+      - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: |
             6.x.x
