--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
-          distribution: temurin
+          distribution: oracle
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: |
