--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
-          distribution: temurin
+          distribution: oracle
       - uses: actions/setup-node@v4
         with:
           node-version: 18
