use default container

--- a/spellsource-server/build.gradle
+++ b/spellsource-server/build.gradle
@@ -384,6 +384,7 @@ jib {
     tags = spellsourceTags
   }
   container {
+    // todo: should this be 8081?
     ports = ['8080']
     jvmFlags = jvmArgs
   }
