--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -5,6 +5,8 @@ on:
 jobs:
   build:
     runs-on: [ self-hosted, linux, x64 ]
+    env:
+      DOTNET_INSTALL_DIR: ~/.dotnet
     steps:
       - uses: actions/checkout@v4
         with:
