--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -14,8 +14,8 @@ jobs:
       - run: git lfs checkout
       - uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: oracle
+          java-version: '23'
+          distribution: temurin
       - uses: actions/setup-node@v4
         with:
           node-version: 22
@@ -23,6 +23,6 @@ jobs:
         with:
           dotnet-version: |
             6.x.x
-      - uses: gradle/wrapper-validation-action@v1
+      - uses: gradle/actions/wrapper-validation@v3
       - name: Test with Gradle
         run: ./gradlew --no-parallel test
