--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@types/node": "22.10.5",
     "ts-node": "^10.9.2"
   },
-  "packageManager": "yarn@4.5.0"
+  "packageManager": "yarn@4.5.0",
+  "scripts": {
+    "postinstall": "yarn run patch-package --patch-dir ./spellsource-web/patches"
+  }
 }
