--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "spellsource-web"
   ],
   "resolutions": {
+    "blockly": "10.0.0",
     "graphql": "16.8.1",
     "@types/node": "22.10.5",
     "typescript": "5.3.3",
     "postgraphile": "^5.0.0-beta.37"
   },
   "dependencies": {
+    "blockly": "10.0.0",
     "patch-package": "^6.5.1",
     "typescript": "^5.3.3",
     "yarn": "^2.4.3"
